# kaine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  FIRST_BOOT.md  LICENSE.md  NOTICE  README.md  SECURITY.md  SETUP.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  container-image-smoke.yml  import-boundary.yml  redteam.yml  tests.yml
compose/: .env.example  kaine.cpu.yml  kaine.organ-host.yml  kaine.rocm.yml  kaine.single-gpu.yml  kaine.yml  qdrant.yml  redis.yml
config/: kaine.toml  secrets.example.toml
config/profiles/: minimal_experiment.toml  thesis_test.toml  tier0.toml  tier1.toml  tier2.toml  tier3.toml
data/abliteration_lens/: contrast_prompts.jsonl  fit_corpus.txt  refusal_contrast.jsonl
docker/: entrypoint.sh
docs/: CONNECTION_GUIDE.md  README.md  abliteration-verification.md  architecture-boundaries.md  architecture.md  configuration.md  contributing.md  deployment-containers.md  deployment-tiers.md  deployment-topologies.md  enforcement-red-team.md  for-researchers.md  getting-started.md  glossary.md  hardware.md  kaine-vision-document.md  licenses.md  operations.md  reproducing-results.md  research-participation.md  security-and-privacy.md  tech-choices.md
docs/audits/: 2026-06-09-pretend-process-audit.md
docs/guides/: embodiment-adapters.md
docs/history/: architecture-roadmap.md
docs/modules/: audition.md  chronos.md  echo.md  eidolon.md  empatheia.md  hypnos.md  lingua.md  mnemos.md  mundus.md  nous.md  perception.md  phantasia.md  praxis.md  soma.md  thymos.md  topos.md  vox.md
docs/processes/: active-inference-benchmark.md  cognitive-cycle.md  controlled-experiment-runners.md  entity-preservation.md  evaluation-sidecar.md  fork-merge-lifecycle.md  global-workspace.md  longitudinal-stability.md  oscillatory-ablation.md  perception-locus.md  research-operation.md  run-admissibility.md  run-identity.md  sleep-maintenance.md  testing-framework.md  voice-alignment.md
docs/shakedowns/: internvideo-next-gpu-shakedown.md
eval_probes/: abliteration_probes.jsonl
kaine/: __init__.py  backend_state.py  boot.py  config.py  entity_clock.py  hardware.py  memory_kinds.py  model_paths.py  net.py  organ_window_state.py  perception_preview.py  perception_preview_server.py  perception_state.py  preboot.py  privacy_filter.py  state_io.py  text_embedding.py
kaine/bus/: AUDIT.md  __init__.py  client.py  config.py  errors.py  schema.py
kaine/cycle/: __init__.py  __main__.py  affect_state.py  control_state.py  engine.py  escalation_state.py  fork_timing.py  incident_log.py  preflight.py  preservation_monitor.py  protocols.py  research_gate.py  spot.py  types.py
kaine/distributed/: __init__.py  boinc.py  fork_being.py  gate.py  job.py  runner.py
kaine/evaluation/: __init__.py  _base.py  ab_divergence.py  affect_correlation.py  attribution.py  config.py  eidolon_accuracy.py  embeddings.py  individuation.py  memory_probes.py  nexus_tab.py  preference_battery.py  proactive_audit.py  registry.py  sink.py  sleep_snapshots.py  trajectory.py  voice_tracking.py
kaine/experiment/: __init__.py  admissibility.py  corpus.py  log_schema.py  manifest.py  multiple_comparisons.py  run_context.py  run_records.py  seeding.py  stability.py  verdict.py  welfare_counts.py
kaine/faithful/: __init__.py  renderer.py  templates.py
kaine/lifecycle/: ADAPTER_MERGING.md  __init__.py  __main__.py  _merge_base.py  adapter_merge.py  decommission.py  divergence.py  fork_merge_gate.py  manager.py  maturation_gate.py  preservation.py  snapshot.py  stage.py  strategies.py  timing_profile.py  welfare_signal.py
kaine/modules/: __init__.py  backends.py  base.py  echo.py  perception_prng.py  registry.py
kaine/nexus/: README.md  __init__.py  __main__.py  app.py  bridge.py  config.py  conversation.py  cycle_control.py  diagnostics.py  log_safety.py  perception.py  privacy.py
kaine/oscillator/: __init__.py  module_oscillator.py
kaine/persistence/: __init__.py  jsonl_sink.py
kaine/remote/: __init__.py  bridge.py
kaine/research/: __init__.py  __main__.py  claude_science_export.py  submission.py
quadlet/: README.md  kaine-chatterbox.container  kaine-cycle.container  kaine-model-server.container  kaine-nexus.container  kaine-qdrant.container  kaine-redis.container  kaine-speaches.container  kaine.network
scripts/: abliteration_lens.py  apply_license_headers.py  bench_audition.py  bench_foveation.py  benchmark_nous_efe.py  check_license_headers.py  first-boot.sh  hypnos_external_train.py  install.py  install.sh  model-server-bootstrap.sh  probe-host  qdrant-bootstrap.sh  redis-bootstrap.sh  refusal_direction_probe.py  tier1_smoke.py  timing_benchmark.py  verify_abliteration.py
tests/: _fakes.py  _module_shedding.py  conftest.py  test_abliteration_gate.py  test_abliteration_lens.py  test_abliteration_veto.py  test_active_inference_benchmark.py  test_adapter_ties_dare_capability_veto.py  test_adapter_ties_dare_real_peft.py  test_adapter_ties_dare_unit.py  test_affect_memory_honesty.py  test_aif_benchmark_isolation.py  test_audio_self_hearing.py  test_audition_acoustic.py  test_audition_emotion.py  test_audition_feed.py  test_audition_forward.py  test_audition_live.py  test_audition_module.py  test_audition_prosody.py  test_audition_stt_client.py  test_base_heartbeat.py  test_base_module_oscillator.py  test_boot_device_logging.py  test_boot_wiring.py  test_bus_client.py  test_bus_config.py  test_bus_schema.py  test_chat_llm_health_probe.py  test_chronos_anomaly.py  test_chronos_featurizer.py  test_chronos_module.py  test_chronos_network.py  test_chronos_rumination.py  test_claude_science_export.py  test_coherence.py  test_config_override.py  test_config_stream_wiring.py  test_consolidation_divergence.py  test_container_deployment.py  (+222 more)
tools/: build_playlist_manifest.py
(+916 files in other folders)
